[package]
name = "whattime"
version = "1.0.2"
edition = "2021"
categories = ["command-line-utilities"]
keywords = ["time", "whattimeisit"]
description = "See the current time at any time!"
repository = "https://github.com/yesseruser/whattimeisit"
homepage = "https://github.com/yesseruser/whattimeisit"
license = "GPL-3.0"

[dependencies]
chrono = "0"
